--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
             <div class="about-context">
                 <h1 class="">&nbsp &nbsp Hii,I am Kalpana Bhogathi. I am <div class="roles">ML and Data Science Enthusiast</div> </h1>
                 <p>I am Currently Studying 3rd Year B.Tech majoring in Computer Science Engineering and Business Systems at Rajeev Gandhi Memorial College Of Engineering.
-                    I am proficient at C,Python,Java Programming Languages.My academic projects and internships have equipped me with hands-on experience in building and deploying data-driven models.
+                    I am proficient at C,Python,Java Programming Languages.My academic projects as Face Recognition,image Classification,Age and Gender Prediction ,House Price Preiction etc  and internships have equipped me with hands-on experience in building and deploying data-driven models.
                 I am also having knowledge on Frontend-Technologies.Actively seeking Internship Opportunities in AI/ML,DataScience and Webdevelopment. </p>
               <a href="resume.pdf" target="_blank"><button>DOWNLOAD CV</button></a></div></div>
             <img src="photo.jpg" >
