--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
             </div>
             <div class="education-item">
                 <h3>Pre University Course - M.P.C</h3>
-                <p>RGUKT UNIVERSITY RKVALLEY</p>
+                <p>IIIT,RGUKT UNIVERSITY RKVALLEY,Idupulapaya.</p>
                 <p>CGPA: 8.9</p>
                 <p>2020-2022</p>
             </div>
